--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,14 @@
-<!-- app/src/main/res/layout/activity_main.xml -->
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#EAF3FF">
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
+        android:layout_above="@+id/fabAdd"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/fabAdd"
-        android:layout_margin="12dp"
-        android:padding="4dp"
-        android:clipToPadding="false" />
+        android:layout_marginBottom="70dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAdd"
@@ -20,10 +16,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="20dp"
-        app:srcCompat="@drawable/ic_add"
-        android:contentDescription="Add"
-        app:tint="@android:color/white"
-        app:backgroundTint="#3A7AFE" />
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add"
+        android:contentDescription="افزودن" />
 
+    <ImageButton
+        android:id="@+id/btnSettings"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_settings"
+        android:contentDescription="تنظیمات" />
 </RelativeLayout>
