--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#2E7D32</color>
-    <color name="income_green">#007E33</color>
-    <color name="expense_red">#C62828</color>
-    <color name="background_gray">#FAFAFA</color>
-    <color name="dark_gray">#555555</color>
-    <color name="black">#000000</color>
-    <color name="white">#FFFFFF</color>
+    <color name="app_background">#FAFAFA</color>
+    <color name="text_dark">#212121</color>
+    <color name="incomeGreen">#2E7D32</color>
+    <color name="expenseRed">#C62828</color>
+    <color name="rowAlternate">#FFF5F5F5</color>
+    <color name="accent">#1976D2</color>
 </resources>
