--- a/app/src/main/res/menu/transaction_item_menu.xml
+++ b/app/src/main/res/menu/transaction_item_menu.xml
@@ -1,6 +1,9 @@
-<!-- app/src/main/res/menu/transaction_item_menu.xml -->
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menu_delete"
+        android:id="@+id/action_edit"
+        android:title="ویرایش" />
+    <item
+        android:id="@+id/action_delete"
         android:title="حذف" />
 </menu>
