--- a/app/src/main/res/drawable/ic_settings.xml
+++ b/app/src/main/res/drawable/ic_settings.xml
@@ -1,9 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="24dp" android:height="24dp"
+    android:viewportWidth="24" android:viewportHeight="24">
     <path
-        android:fillColor="#444"
-        android:pathData="M19.43,12.98c0.04,-0.32 0.07,-0.65 0.07,-0.98s-0.03,-0.66 -0.07,-0.98l2.11,-1.65a0.5,0.5 0 0,0 0.12,-0.64l-2,-3.46a0.5,0.5 0 0,0 -0.6,-0.22l-2.49,1a7.007,7.007 0 0,0 -1.69,-0.98l-0.38,-2.65A0.5,0.5 0 0,0 14,2h-4a0.5,0.5 0 0,0 -0.5,0.42l-0.38,2.65a6.978,6.978 0 0,0 -1.69,0.98l-2.49,-1a0.5,0.5 0 0,0 -0.6,0.22l-2,3.46a0.5,0.5 0 0,0 0.12,0.64l2.11,1.65c-0.04,0.32 -0.07,0.65 -0.07,0.98s0.03,0.66 0.07,0.98l-2.11,1.65a0.5,0.5 0 0,0 -0.12,0.64l2,3.46a0.5,0.5 0 0,0 0.6,0.22l2.49,-1c0.52,0.4 1.08,0.73 1.69,0.98l0.38,2.65a0.5,0.5 0 0,0 0.5,0.42h4a0.5,0.5 0 0,0 0.5,-0.42l0.38,-2.65a6.978,6.978 0 0,0 1.69,-0.98l2.49,1a0.5,0.5 0 0,0 0.6,-0.22l2,-3.46a0.5,0.5 0 0,0 -0.12,-0.64l-2.11,-1.65zM12,15.5a3.5,3.5 0 1,1 0,-7 3.5,3.5 0 0,1 0,7z"/>
+        android:fillColor="#FFFFFF"
+        android:pathData="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.98C19.47,12.66 19.5,12.34 19.5,12C19.5,11.66 19.47,11.34 19.43,11.02L21.54,9.37L19.95,6.63L17.5,7.24C17.03,6.87 16.5,6.56 15.91,6.33L15.5,3H8.5L8.09,6.33C7.5,6.56 6.97,6.87 6.5,7.24L4.05,6.63L2.46,9.37L4.57,11.02C4.53,11.34 4.5,11.66 4.5,12C4.5,12.34 4.53,12.66 4.57,12.98L2.46,14.63L4.05,17.37L6.5,16.76C6.97,17.13 7.5,17.44 8.09,17.67L8.5,21H15.5L15.91,17.67C16.5,17.44 17.03,17.13 17.5,16.76L19.95,17.37L21.54,14.63L19.43,12.98Z"/>
 </vector>
