--- a/app/src/main/res/menu/transaction_item_menu.xml
+++ b/app/src/main/res/menu/transaction_item_menu.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/action_edit"
-        android:title="ویرایش" />
+        android:title="ویرایش"
+        android:icon="@drawable/ic_edit"
+        android:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_move_up"
+        android:title="جابجایی به بالا"
+        android:icon="@drawable/ic_arrow_up"
+        android:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_move_down"
+        android:title="جابجایی به پایین"
+        android:icon="@drawable/ic_arrow_down"
+        android:showAsAction="never" />
+
     <item
         android:id="@+id/action_delete"
-        android:title="حذف" />
+        android:title="حذف"
+        android:icon="@drawable/ic_delete"
+        android:showAsAction="never" />
+
 </menu>
