--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.Hesab.LightBlue" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Hesab.LightBlue" parent="Theme.Material3.Dark.NoActionBar">
         <item name="colorPrimary">#1976D2</item>
         <item name="colorOnPrimary">#FFFFFF</item>
         <item name="colorSecondary">#0D47A1</item>
@@ -11,7 +11,7 @@
         <item name="android:fontFamily">@font/vazir</item>
     </style>
 
-    <style name="Theme.Hesab.SoftGreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Hesab.SoftGreen" parent="Theme.Material3.Dark.NoActionBar">
         <item name="colorPrimary">#2E7D32</item>
         <item name="colorOnPrimary">#FFFFFF</item>
         <item name="colorSecondary">#1B5E20</item>
@@ -22,7 +22,7 @@
         <item name="android:fontFamily">@font/iransans</item>
     </style>
 
-    <style name="Theme.Hesab.Dark" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Hesab.Dark" parent="Theme.Material3.Dark.NoActionBar">
         <item name="colorPrimary">#000000</item>
         <item name="colorOnPrimary">#FFFFFF</item>
         <item name="colorSecondary">#333333</item>
@@ -33,7 +33,7 @@
         <item name="android:fontFamily">@font/diana</item>
     </style>
 
-    <style name="Theme.Hesab.Light" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Hesab.Light" parent="Theme.Material3.Dark.NoActionBar">
         <item name="colorPrimary">#CCCCCC</item>
         <item name="colorOnPrimary">#FFFFFF</item>
         <item name="colorSecondary">#B0BEC5</item>
