--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,34 +1,51 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- تم اصلی -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryVariant">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
-    </style>
-
-    <!-- تم‌ها -->
-    <style name="AppTheme_Blue" parent="AppTheme">
-        <item name="colorPrimary">#64B5F6</item>
-        <item name="colorAccent">#2196F3</item>
-    </style>
-
-    <style name="AppTheme_Green" parent="AppTheme">
-        <item name="colorPrimary">#81C784</item>
-        <item name="colorAccent">#388E3C</item>
-    </style>
-
-    <!-- فونت‌ها -->
-    <style name="Font_IranSans">
-        <item name="android:fontFamily">@font/iransans</item>
-    </style>
-
-    <style name="Font_Vazir">
+    <!-- تم آبی -->
+    <style name="Theme.Hesab.LightBlue" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">#1976D2</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
+        <item name="colorSecondary">#0D47A1</item>
+        <item name="colorBackground">#0E1116</item>
+        <item name="android:statusBarColor">#000000</item>
+        <item name="android:navigationBarColor">#000000</item>
+        <item name="android:windowLightStatusBar">false</item>
         <item name="android:fontFamily">@font/vazir</item>
     </style>
 
-    <style name="Font_Diana">
+    <!-- تم سبز -->
+    <style name="Theme.Hesab.SoftGreen" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">#2E7D32</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
+        <item name="colorSecondary">#1B5E20</item>
+        <item name="colorBackground">#0E1110</item>
+        <item name="android:statusBarColor">#000000</item>
+        <item name="android:navigationBarColor">#000000</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:fontFamily">@font/iransans</item>
+    </style>
+
+    <!-- تم تیره -->
+    <style name="Theme.Hesab.Dark" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">#000000</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
+        <item name="colorSecondary">#333333</item>
+        <item name="colorBackground">#000000</item>
+        <item name="android:statusBarColor">#000000</item>
+        <item name="android:navigationBarColor">#000000</item>
+        <item name="android:windowLightStatusBar">false</item>
         <item name="android:fontFamily">@font/diana</item>
+    </style>
+
+    <!-- تم روشن -->
+    <style name="Theme.Hesab.Light" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">#CCCCCC</item>
+        <item name="colorOnPrimary">#000000</item>
+        <item name="colorSecondary">#B0BEC5</item>
+        <item name="colorBackground">#F5F5F5</item>
+        <item name="android:statusBarColor">#000000</item>
+        <item name="android:navigationBarColor">#000000</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:fontFamily">sans-serif</item>
     </style>
 
 </resources>
